Spacing fixes for page loyout.

--- a/css/homepage.styl
+++ b/css/homepage.styl
@@ -38,7 +38,7 @@ section.homepage
         display: block
         position: relative
         flexboxCenter()
-        width: 15%
+        width: $leftColumnWidth
         float: left
         text-align: center
         height: 100%
@@ -109,7 +109,7 @@ section.homepage
 
 .homepage svg
     display: block
-    width: 85%
+    width: 100% - $leftColumnWidth
     height: 100%
 
     .xAxis
