--- a/css/main.styl
+++ b/css/main.styl
@@ -6,7 +6,7 @@
 body > header
     .title
         display: block
-        padding: 1rem 2rem
+        padding: 1rem 0
         margin-bottom: 2rem
         border: none
         background: none
@@ -19,14 +19,19 @@ body > header
 
     .avatar
         float: left
-        margin-right: 0.5rem
-        position: relative
-        border-radius: 50%
+        display: inline-block
+        width: $leftColumnWidth
+        margin-right: $gutterWidth
+        text-align: right
+
+        img
+            border-radius: 50%
 
         @media screen and (max-width: 400px)
-            width: 50px
-            height: 50px
-            top: 0.8rem
+            img
+                width: 50px
+                height: 50px
+                margin-top: 0.8rem
 
     h1
         font-size: 2rem
@@ -48,7 +53,9 @@ body > header
         $locationIcon(#aaa)
 
 .content
-    padding: 0 7rem
+    margin-left: $leftColumnWidth       // Fallback for old browsers
+    margin-left: "calc(%s + %s)" % ($leftColumnWidth $gutterWidth)
+    padding-right: 0 7rem
 
 ul.posts
     list-style-type: none
@@ -107,9 +114,6 @@ ul.posts
 
 // Mobile content
 @media screen and (max-width: 800px)
-    body > header .title
-        padding: 1rem
-
     .content
         margin-left: 0
         padding: 0 1rem
